Library scanning much quicker BasicSupport rewrite to allow quicker scanning of library items